--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -6,6 +6,9 @@
     url("fonts/Inter-Regular.otf") format("otf");
   font-weight: normal;
   font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 @font-face {
   font-family: "Inter-Black";
@@ -15,6 +18,9 @@
     url("fonts/Inter-Black.otf") format("otf");
   font-weight: normal;
   font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
 @font-face {
   font-family: "Inter-Bold";
@@ -25,4 +31,7 @@
     url("fonts/Inter-Black.svg") format("svg");
   font-weight: normal;
   font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 }
