--- a/blocks/cover/__text/__title/cover__title.css
+++ b/blocks/cover/__text/__title/cover__title.css
@@ -1,5 +1,5 @@
 .cover__title{
-  font-family: 'Inter-Black';
+  font-family: 'Inter';
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
