--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,5 @@
 .footer__copyright{
-  font-family: "inter-Regular";
+  font-family: 'Inter';
   font-size: 14px;
   font-weight: normal;
   line-height: 16px;
