--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,6 @@
-@import url(__logo/header__logo.css);
 @import url(__lang/header__lang.css);
-@import url(__lang-link/header__lang-link.css);
-@import url(../header/__lang-link/_text_underline/header__lang-link_text_underline.css);
+@import url(__link/header__link.css);
+@import url(../header/__link/_active/header__link_active_underline.css);
 
 .header {
   max-width: 1184px;
