--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,7 @@
 .intro__title{
   max-width: 690px;
   font-size: 54px;
-  font-family: 'Inter-Black';
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
   line-height: 58px;
