--- a/blocks/lead/__capture/lead__capture.css
+++ b/blocks/lead/__capture/lead__capture.css
@@ -1,5 +1,6 @@
 .lead__capture {
-  font-family: "inter-Regular";
+  font-family: 'Inter';
+  font-weight: normal;
   max-width: 100%;
   font-size: 10px;
   line-height: 15px;
