--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,5 +1,5 @@
 .lead__title {
-  font-family: "Inter-Black";
+  font-family: "Inter";
   font-style: normal;
   font-size: 96px;
   font-weight: 900;
