--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,5 +1,5 @@
 .place__paragraph {
-  font-family: "Inter-Regular";
+  font-family: 'Inter';
   font-style: normal;
   font-size: 18px;
   font-weight: normal;
