--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,9 +1,9 @@
 .place__title{
-  font-family: 'Inter-Black';
+  font-family: 'Inter';
   font-style: normal;
   font-size: 72px;
   font-weight: 900;
-  line-height: 74px;
+  line-height: 76px;
   max-width: 460px;
   margin: 0;
 }
