--- a/blocks/place/__website/__url/website__url-heading.css
+++ b/blocks/place/__website/__url/website__url-heading.css
@@ -5,8 +5,12 @@
   line-height: 1.7em;
   letter-spacing: 0.2em;
   color: #aaa;
-  margin: 0;
-  margin-bottom: 12px;
+  margin: 0 0 12px;
+}
+@media only screen and (max-width: 1024px) {
+  .website__url-heading {
+    margin-bottom: 6px;
+  }
 }
 
 @media only screen and (max-width: 768px) {
