--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -4,15 +4,12 @@
 body {
   border: 1px solid greenyellow;
 }*/
-@import url(../fonts/fonts.css);
 
 .root {
   max-width: 1280px;
+  width: 100%;
   margin: 0 auto;
   background-color: #2A2C2F;
-  font-family: 'Inter-Regular';
-  font-style: normal;
-  font-weight: normal;
   color: #fff;
   padding: 29px 0 24px;
   box-sizing: border-box;
