--- a/pages/index.css
+++ b/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
-@import url(../root/root.css);
 @import url(../fonts/fonts.css);
+@import url(../blocks/root/root.css);
+@import url(../blocks/logo/logo.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/lead/lead.css);
 @import url(../blocks/intro/intro.css);
