добавил новые изменения

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,4 +1,6 @@
 @import url(__text/cover__text.css);
+@import url(__title/cover__title.css);
+@import url(__subtitle/cover__subtitle.css);
 @import url(__background/cover__background.css);
 @import url(__overlay/cover__overlay.css);
 
@@ -21,6 +23,6 @@
 
 @media only screen and (max-width: 320px){
   .cover{
-    margin: 0 auto 64px;
+    margin: 0 auto 67px;
   }
 }
