--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,5 +1,5 @@
-.cover__subtitle{
-  font-family: 'Inter';
+.cover__subtitle {
+  font-family: "Inter";
   font-size: 18px;
   font-weight: normal;
   line-height: 22px;
@@ -8,7 +8,7 @@
   margin: 0;
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 768px) {
   .cover__subtitle {
     max-width: 360px;
     font-size: 18px;
@@ -16,10 +16,17 @@
   }
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 320px) {
   .cover__subtitle {
     max-width: 288px;
     font-size: 14px;
     line-height: 16px;
+  }
+
+}
+
+@media only screen and (min-width: 400px) {
+  .cover__subtitle br {
+    display: none;
   }
 }
