--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -1,7 +1,5 @@
-@import url(__title/cover__title.css);
-@import url(__subtitle/cover__subtitle.css);
-
 .cover__text{
+  min-width: 288px;
   display: flex;
   flex-direction: column;
   justify-content: center;
