--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -20,7 +20,12 @@
 
 @media only screen and (max-width: 768px) {
   .header {
-    max-width: 720px;
     margin: 0 24px 55px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .header {
+    margin: 0 16px 51px;
   }
 }
