--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,7 +11,7 @@
 }
 @media only screen and (max-width: 768px){
   .lead__title {
-    margin: 1px auto 25px;
+    margin: 0 auto 25px;
   }
 }
 
@@ -19,6 +19,6 @@
   .lead__title {
     font-size: 40px;
     line-height: 44px;
-    margin: 5px auto 13px;
+    margin: 0 auto 13px;
   }
 }
