--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,11 +1,11 @@
-.cover__subtitle {
+.cover__subtitle{
   font-family: "Inter";
   font-size: 18px;
   font-weight: normal;
   line-height: 22px;
   max-width: 360px;
   text-align: center;
-  margin: 0;
+  margin: 0 auto;
 }
 
 @media only screen and (max-width: 768px) {
@@ -22,7 +22,6 @@
     font-size: 14px;
     line-height: 16px;
   }
-
 }
 
 @media only screen and (min-width: 400px) {
