--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -4,6 +4,8 @@
 @import url(__subtitle/cover__subtitle.css);
 
 .cover{
+  max-width: 1184px;
+  max-height: 740px;
   margin: 0 auto 92px;
   position: relative;
 }
