--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -3,9 +3,10 @@
   margin: 0;
   padding: 0;
   display: flex;
+  flex-direction: row;
 }
 
-@media only screen and (max-width: 700px){
+@media only screen and (max-width: 600px){
   .footer__links{
     flex-direction: column;
   }
