--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,16 +9,17 @@
   text-align: center;
   margin-bottom: 24px;
 }
+
 @media only screen and (max-width: 768px){
   .lead__title {
     margin: 0 auto 25px;
   }
 }
 
-@media only screen and (max-width: 320px){
+@media only screen and (max-width: 600px){
   .lead__title {
-    font-size: 40px;
-    line-height: 44px;
+    font-size: 12.5vw;
+    line-height: 1.1;
     margin: 0 auto 13px;
   }
 }
