--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -8,10 +8,15 @@
   line-height: 28px;
   text-decoration: none;
   margin-right: 18px;
+  opacity: 1;
 }
 
 .header__link:last-child{
 margin: 0;
+}
+
+.header__link:hover {
+  opacity: 0.8;
 }
 
 @media only screen and (max-width: 600px){
