--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,5 +1,4 @@
-.cover__title{
-  font-family: 'Inter';
+.cover__title {
   font-size: 72px;
   font-weight: 900;
   line-height: 76px;
@@ -8,18 +7,17 @@
   margin: 0 auto 32px;
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 720px) {
   .cover__title {
+    font-size: 10vw;
+    line-height: 1.1;
+    max-width: 75vw;
     margin: 0 0 20px;
   }
 }
 
-@media only screen and (max-width: 420px){
+@media only screen and (max-width: 320px) {
   .cover__title {
-    max-width: 288px;
-    font-size: 32px;
-    line-height: 35px;
-    max-width: 250px;
     margin: 0 0 15px;
   }
 }
