--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,22 +1,21 @@
-.footer__link{
-  font-family: 'Inter';
+.footer__link {
   text-decoration: none;
   color: #fff;
   font-size: 16px;
   font-weight: normal;
   line-height: 18px;
   transition: 0.8s;
-  margin: 0 18px 0 0;;
+  margin: 0 18px 0 0;
 }
-.footer__link:last-child{
+.footer__link:last-child {
   margin: 0;
 }
-.footer__link:hover{
+.footer__link:hover {
   opacity: 0.8;
 }
 
-@media only screen and (max-width: 600px){
-  .footer__link{
+@media only screen and (max-width: 760px) {
+  .footer__link {
     font-size: 24px;
     line-height: 24px;
     margin: 0 0 32px;
