--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,26 +1,29 @@
-.intro__title{
+.intro__title {
   max-width: 690px;
   font-size: 54px;
-  font-family: 'Inter';
-  font-style: normal;
   font-weight: 900;
   line-height: 58px;
   margin: 0 0 33px;
   padding: 0;
 }
 
-@media only screen and (max-width: 768px){
-  .intro__title{
-    max-width: 100%;
+@media only screen and (max-width: 768px) {
+  .intro__title {
     padding: 0 24px;
+  }
+}
+
+@media only screen and (max-width: 720px) {
+  .intro__title {
+    font-size: 10vw;
+    line-height: 1.1;
+    max-width: 100%;
     margin: 0 0 33px;
   }
 }
 
-@media only screen and (max-width: 320px){
-  .intro__title{
-    font-size: 32px;
-    line-height: 35px;
+@media only screen and (max-width: 320px) {
+  .intro__title {
     max-width: 70%;
     padding: 0 16px;
     margin: 0 0 35px;
