--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -4,25 +4,24 @@
 @import url(__list/intro__list.css);
 @import url(__lists-item/intro__lists-item.css);
 
-.intro{
-  width: 100%;
+.intro {
   max-width: 984px;
   margin: 0 auto 92px;
 }
 
-@media only screen and (max-width: 1024px){
-  .intro{
+@media only screen and (max-width: 1024px) {
+  .intro {
     margin: 0 48px 93px;
   }
 }
-@media only screen and (max-width: 768px){
-  .intro{
-    margin: 0 auto 89px;
+@media only screen and (max-width: 768px) {
+  .intro {
+    margin: 0 0 89px;
   }
 }
 
-@media only screen and (max-width: 320px){
-  .intro{
-    margin: 0 auto 65px;
+@media only screen and (max-width: 320px) {
+  .intro {
+    margin-bottom: 65px;
   }
 }
