--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -12,14 +12,14 @@
 
 @media only screen and (max-width: 768px){
   .lead__title {
-    margin: 0 auto 25px;
+    font-size: 12.5vw;
+    line-height: 1.1;
+    margin-bottom: 25px;
   }
 }
 
 @media only screen and (max-width: 600px){
   .lead__title {
-    font-size: 12.5vw;
-    line-height: 1.1;
-    margin: 0 auto 13px;
+    margin-bottom: 13px;
   }
 }
