--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,13 +1,10 @@
 .place__paragraph {
-  font-family: 'Inter';
-  font-style: normal;
   font-size: 18px;
   font-weight: normal;
   line-height: 30px;
   margin: 0;
   padding: 0;
   max-width: 484px;
-  min-width: 288px;
 }
 
 .place__paragraph + .place__paragraph {
@@ -16,6 +13,7 @@
 
 @media only screen and (max-width: 768px) {
   .place__paragraph {
+    width: 100%;
     font-size: 16px;
     line-height: 26px;
   }
@@ -23,13 +21,7 @@
 
 @media only screen and (max-width: 320px) {
   .place__paragraph {
+    max-width: 288px;
     padding: 0 16px;
-  }
-}
-
-/* знаю что нельзя использовать <br> но сделал так, чтоб совпало с макетом на маленьком разрешении */
-@media only screen and (min-width: 400px) {
-  .place__paragraph br{
-    display: none;
   }
 }
