--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,5 +1,4 @@
-.website__url-heading {
-  font-family: "inter-Regular";
+.plac__uerl-heading {
   font-size: 12px;
   font-weight: normal;
   line-height: 1.7em;
@@ -9,7 +8,7 @@
 }
 
 @media only screen and (max-width: 768px) {
-  .website__url-heading {
+  .place__url-heading {
     margin-bottom: 7px;
   }
 }
