--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,6 +6,8 @@ body {
 }*/
 
 .root {
+  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-style: normal;
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
