--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,4 +1,6 @@
-.cover__link{
+.cover__link {
+  width: 100%;
+  height: 740px;
   text-decoration: none;
   color: white;
   display: flex;
@@ -6,18 +8,16 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
+  background-image: url(../../../images/cover__background.svg);
+  background-size: cover;
+  position: relative;
   margin: 0 auto;
   z-index: 1;
 }
 
-.cover__link::after{
-  content: '';
-  background: #2A2C2F;
+.cover__link::after {
+  content: "";
+  background: #2a2c2f;
   opacity: 0.3;
   position: absolute;
   top: 0;
@@ -28,7 +28,24 @@
   transition: 0.8s;
 }
 
-.cover__link:hover::after{
+.cover__link:hover::after {
   opacity: 0.8;
 }
 
+@media only screen and (max-width: 1024px) {
+  .cover__link {
+    height: 640px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .cover__link {
+    height: 480px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .cover__link {
+    height: 200px;
+  }
+}
