--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,25 +2,24 @@
 @import url(__link/footer__link.css);
 @import url(__copyright/footer__copyright.css);
 
-.footer{
+.footer {
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   align-items: flex-end;
   max-width: 95%;
-  margin: 0 48px;
-  padding: 0;
+  margin: 0 auto;
 }
 
-@media only screen and (max-width: 1000px){
-  .footer{
-    margin: 0 24px;
+@media only screen and (max-width: 1000px) {
+  .footer {
+    padding: 0 24px;
   }
 }
 
-@media only screen and (max-width: 760px){
-  .footer{
-    margin: 0 16px;
+@media only screen and (max-width: 760px) {
+  .footer {
+    padding: 0 5vw;
     min-height: 310px;
     flex-direction: column;
     justify-content: space-between;
