--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,4 +1,4 @@
-.lead__subtitle{
+.lead__subtitle {
   font-size: 30px;
   font-weight: normal;
   line-height: 36px;
@@ -7,22 +7,17 @@
   text-align: center;
 }
 
-@media only screen and (max-width: 1024px){
+@media only screen and (max-width: 1024px) {
   .lead__subtitle {
-    margin: 0 auto 56px;
+    margin-bottom: 56px;
   }
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 760px) {
   .lead__subtitle {
-    font-size: 5vw;
+    max-width: 288px;
+    font-size: 16px;
     line-height: 1.25;
-    margin: 0 auto 55px;
-  }
-}
-
-@media only screen and (max-width: 320px){
-  .lead__subtitle {
-    margin: 0 auto 40px;
+    margin-bottom: 40px;
   }
 }
