--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,21 +5,16 @@
   font-weight: 900;
   line-height: 100px;
   max-width: 700px;
-  margin: 7px auto 24px;
+  margin: 0 auto 24px;
   text-align: center;
   margin-bottom: 24px;
 }
 
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 760px){
   .lead__title {
-    font-size: 12.5vw;
+    max-width: 288px;
+    font-size: 40px;
     line-height: 1.1;
-    margin-bottom: 25px;
-  }
-}
-
-@media only screen and (max-width: 600px){
-  .lead__title {
-    margin-bottom: 13px;
+    margin-bottom: 15px;
   }
 }
