--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,6 +3,7 @@
 @import url(__website/place__website.css);
 @import url(__link/place__link.css);
 @import url(__url-heading/place__url-heading.css);
+@import url(__text/place__text.css);
 @import url(__paragraph/place__paragraph.css);
 
 .place {
@@ -18,7 +19,6 @@
 
 @media only screen and (max-width: 1024px) {
   .place {
-    padding: 0 48px;
     grid-template-columns: minmax(310px, 440px) minmax(330px, 456px);
     grid-gap: 43px 32px;
     margin-bottom: 84px;
@@ -27,7 +27,6 @@
 
 @media only screen and (max-width: 768px) {
   .place {
-    padding: 0 24px;
     grid-template-columns: minmax(30px, 340px) minmax(30px, 352px);
     grid-gap: 44px 28px;
     margin-bottom: 71px;
@@ -42,7 +41,6 @@
   .place {
     max-width: 460px;
     min-width: 320px;
-    padding: 0;
     display: flex;
     flex-direction: column;
     margin: 0 auto 52px;
