--- a/blocks/root/root.css
+++ b/blocks/root/root.css
@@ -6,19 +6,19 @@ body {
 }*/
 
 .root {
-  font-family: 'Inter', Arial, Helvetica, sans-serif;
+  font-family: "Inter", Arial, Helvetica, sans-serif;
   font-style: normal;
   max-width: 1280px;
   width: 100%;
   margin: 0 auto;
-  background-color: #2A2C2F;
+  background-color: #2a2c2f;
   color: #fff;
   padding: 29px 0 24px;
   box-sizing: border-box;
 }
 
-@media only screen and (max-width: 700px){
-  .root{
-padding: 16px 0 24px;
+@media only screen and (max-width: 700px) {
+  .root {
+    padding: 16px 0 24px;
   }
 }
