--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,9 +1,7 @@
 .header__link {
   margin: 0;
   color: #fff;
-  font-family: 'Inter';
   font-weight: normal;
-  font-style: normal;
   font-size: 24px;
   line-height: 28px;
   text-decoration: none;
@@ -12,7 +10,7 @@
 }
 
 .header__link:last-child{
-margin: 0;
+margin-right: 0;
 }
 
 .header__link:hover {
