--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,4 @@
 @import url(__link/cover__link.css);
-@import url(__background/cover__background.css);
 @import url(__title/cover__title.css);
 @import url(__subtitle/cover__subtitle.css);
 
@@ -11,18 +10,18 @@
 
 @media only screen and (max-width: 1024px) {
   .cover {
-    margin: 0 auto 88px;
+    margin-bottom: 88px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .cover {
-    margin: 0 auto 81px;
+    margin-bottom: 81px;
   }
 }
 
 @media only screen and (max-width: 320px) {
   .cover {
-    margin: 0 auto 67px;
+    margin-bottom: 67px;
   }
 }
