--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,7 +9,8 @@
 .place {
   display: grid;
   grid-template-columns: 460px 484px;
-  grid-gap: 41px 40px;
+  gap: 42px 40px;
+  margin: 0 auto;
   margin-bottom: 87px;
 }
 
@@ -19,18 +20,17 @@
 
 @media only screen and (max-width: 1279px) {
   .place {
-    grid-template-columns: minmax(310px, 440px) minmax(330px, 456px);
-    grid-gap: 43px 32px;
+    grid-template-columns: minmax(440px, 460px) minmax(456px, 484px);
+    gap: 43px 32px;
     margin-bottom: 84px;
   }
 }
 
 @media only screen and (max-width: 1023px) {
   .place {
-    grid-template-columns: minmax(30px, 340px) minmax(30px, 352px);
-    grid-gap: 44px 28px;
-    /* совпадает с макетом, добавил неразрывный пробел в текст*/
-    margin-bottom: 71px;
+    grid-template-columns: minmax(340px, 440px) minmax(352px, 456px);
+    gap: 42px 28px;
+    margin-bottom: 75px;
   }
   /* уменьшаем ширину первого заголовка на 768 px, подгоняем под макет дизайнера */
   .place:first-child .place__title {
@@ -44,7 +44,7 @@
     min-width: 320px;
     display: flex;
     flex-direction: column;
-    grid-gap: 0;
+    gap: 0;
     margin: 0 auto 52px;
   }
   .place:first-child .place__title {
