--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -8,7 +8,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  /* исправил формат картинки */
   background-image: url(../../../images/cover.jpg);
   background-size: cover;
   position: relative;
@@ -35,18 +34,6 @@
 
 @media only screen and (max-width: 1024px) {
   .cover__link {
-    height: 640px;
-  }
-}
-
-@media only screen and (max-width: 768px) {
-  .cover__link {
-    height: 480px;
-  }
-}
-
-@media only screen and (max-width: 320px) {
-  .cover__link {
-    height: 200px;
+    height: 62.5vw;
   }
 }
