--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,13 +1,20 @@
 .intro__text {
   font-weight: normal;
-  margin: 0 0 33px;
-  max-width: 690px;
+  margin: 0 0 39px;
+  max-width: min(100vw, 690px);
   font-size: 16px;
   line-height: 26px;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
   .intro__text {
-    max-width: 100%;
+    margin-bottom: 33px;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .intro__text {
+    max-width: min(100vw, 720px);
+  }
+}
+
