--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,16 +1,14 @@
 .intro__title {
   max-width: 690px;
-  font-size: 54px;
+  font-size: max(32px, min(7.1vw, 54px));
   font-weight: 900;
-  line-height: 58px;
+  line-height: max(35px, min(7.6vw, 58px));
   margin: 0 0 33px;
   padding: 0;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 767px) {
   .intro__title {
-    font-size: 32px;
-    line-height: 1.1;
     max-width: 100%;
   }
 }
