--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,7 +1,7 @@
 .lead__subtitle {
-  font-size: 30px;
+  font-size: max(16px, min(4vw, 30px));
   font-weight: normal;
-  line-height: 36px;
+  line-height: 1.2;
   max-width: 640px;
   margin: 0 auto 64px;
   text-align: center;
@@ -13,10 +13,8 @@
   }
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 767px) {
   .lead__subtitle {
-    max-width: 288px;
-    font-size: 16px;
     line-height: 1.25;
     margin-bottom: 40px;
   }
