--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,20 +1,9 @@
 .lead__title {
-  /*font-family: "Inter";
-  font-style: normal; загрузка шрифта идет со страницы */
-  font-size: 96px;
+  font-size: max(40px, min(12.5vw, 96px));
   font-weight: 900;
-  line-height: 100px;
+  line-height: max(44px, min(13.1vw, 100px));
   max-width: 700px;
-  margin: 0 auto 24px;
+  margin: 0 auto;
   text-align: center;
-  margin-bottom: 24px;
-}
-
-@media only screen and (max-width: 760px){
-  .lead__title {
-    max-width: 288px;
-    font-size: 40px;
-    line-height: 1.1;
-    margin-bottom: 15px;
-  }
+  margin-bottom: max(15px, min(3.125vw, 24px));
 }
