--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,20 +1,11 @@
 .place__paragraph {
-  font-size: 18px;
+  font-size: max(16px, min(2vw, 18px));
   font-weight: normal;
-  line-height: 30px;
+  line-height: max(26px, min(3vw, 30px));
   margin: 0;
   padding: 0;
-  max-width: 484px;
 }
 
 .place__paragraph + .place__paragraph {
   margin-top: 24px;
-}
-
-@media only screen and (max-width: 768px) {
-  .place__paragraph {
-    width: 100%;
-    font-size: 16px;
-    line-height: 26px;
-  }
 }
