--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,10 +1,13 @@
 .place__text {
+  width: 100%;
   padding: 0;
-  margin: 0;
+  margin: 0 0 0;
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 767px) {
   .place__text {
+    min-width: 288px;
+    width: 90%;
     padding: 0 16px;
   }
 }
