--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,23 +1,24 @@
 .places {
-  margin: 0 auto 92px;
+  margin: 0 auto 94px;
+  padding: 0;
   max-width: 984px;
 }
 
 @media only screen and (max-width: 1024px) {
   .places {
-    max-width: 90%;
+    max-width: 100%;
+    margin: 0 calc(24px + ((100vw - 768px) / 10.7)) 102px;
   }
 }
 
 @media only screen and (max-width: 768px) {
   .places {
-    max-width: 94%;
+    margin: 0 24px 86px;
   }
 }
 
-@media only screen and (max-width: 760px) {
+@media only screen and (max-width: 767px) {
   .places {
-    max-width: 100%;
-    margin-bottom: 66px;
+    margin: 0 0 66px;
   }
 }
