--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,6 +1,7 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/root/root.css);
+@import url(../blocks/scrolling/scrolling.css);
 @import url(../blocks/button/button.css);
 @import url(../blocks/logo/logo.css);
 @import url(../blocks/header/header.css);
