--- a/src/blocks/scrolling/scrolling.css
+++ b/src/blocks/scrolling/scrolling.css
@@ -3,7 +3,7 @@
   top: 0;
   left: 0;
   z-index: 10;
-  width: 0%;
+  width: 0vw;
   height: 3px;
   border-radius: 2px;
   background: -webkit-linear-gradient(
